--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+    //implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+
 }
