--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.GraduateCorner"
         tools:targetApi="31">
         <activity
+            android:name=".PdfViewerBook"
+            android:exported="false" />
+        <activity
             android:name=".offers.NotesActivity"
             android:exported="false">
             <meta-data
@@ -40,7 +43,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".offers.SkillsActivity"
             android:exported="false">
