--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,9 @@
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
     }
@@ -7,3 +12,4 @@ plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
 }
+
